--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.14",
+    "axios": "^1.3.4",
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "postcss": "^8.4.21",
+    "sass": "^1.60.0",
+    "sass-loader": "^13.2.1",
+    "tailwindcss": "^3.2.7",
+    "vue": "^2.6.14",
+    "vue-router": "^3.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
